add <style> to the list of unmodified tags

--- a/README.rdoc
+++ b/README.rdoc
@@ -29,7 +29,7 @@ published posts (and final HTML output) will appear with smart
 quotes, em-dashes, and proper ellipses.
 
 RubyPants does not modify characters within <tt><pre></tt>,
-<tt><code></tt>, <tt><kbd></tt>, <tt><math></tt> or
+<tt><code></tt>, <tt><kbd></tt>, <tt><math></tt>, <tt><style></tt> or
 <tt><script></tt> tag blocks. Typically, these tags are used to
 display text where smart quotes and other "smart punctuation" would
 not be appropriate, such as source code or example markup.
