Use svg badge for retina purtiness

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,6 +1,6 @@
 = RubyPants: SmartyPants for Ruby
 
-{<img src="https://img.shields.io/gem/v/rubypants.png?style=plastic">}[https://rubygems.org/gems/rubypants]
+{<img src="https://img.shields.io/gem/v/rubypants.svg?style=plastic">}[https://rubygems.org/gems/rubypants]
 
 == Synopsis
 
